Fix to modal top spacing

--- a/site/assets/src/scss/blocks/modal.scss
+++ b/site/assets/src/scss/blocks/modal.scss
@@ -2,4 +2,5 @@
     border-radius: 20px;
     box-shadow: 10px 10px 20px 0px rgba(0,0,0, 0.5);
     padding-block-end: spacing(2);
+    top: 0 !important;
 }
